--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://example.com"
 languageCode = "en-us"
 defaultContentLanguage = "en"
-title = "Cupper"
+title = "Rahmat Hidayat"
 theme = "cupper-hugo-theme"
 # googleAnalytics = "UA-123456789-1"
 disqusShortname = "yourdiscussshortname"
