--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://rahmathidayat.my.id"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Rahmat Hidayat"
