--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Rahmat Hidayat"
 theme = "cupper-hugo-theme"
-# googleAnalytics = "UA-123456789-1"
+googleAnalytics = "UA-134956300-2"
 disqusShortname = "yourdiscussshortname"
 enableGitInfo = true
 
