--- a/config.toml
+++ b/config.toml
@@ -1,54 +1,62 @@
-baseURL = "https://rahmathidayat.my.id/"
+baseurl = "https://rahmathidayat.my.id/"
 languageCode = "en-us"
-title = "Rahmat Hidayat"
-subtitle = "@zhorahmatt"
-theme = "archie"
-copyright = "© zhorahmatt"
-# Code Highlight
-pygmentsstyle = "monokai"
-pygmentscodefences = true
-pygmentscodefencesguesssyntax = true
-ignoreErrors = ["error-remote-getjson"]
-googleAnalytics = "UA-123-45"
-
-paginate=5 # articles per page
+theme = "hello-friend"
+paginate = 5
 
 [params]
-	mode="auto" # color-mode → light,dark or auto
-	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
-    subtitle = "terbentur, terbentur, terbentuk - Tan Malaka"
-    favicon = "icons/indo.ico"
+  # dir name of your blog content (default is `content/posts`).
+  # the list of set content will show up on your index page (baseurl).
+  contentTypeName = "posts"
 
-# Social Tags
+  # "light" or "dark"
+  defaultTheme = "light"
 
-[[params.social]]
-name = "GitHub"
-icon = "github"
-url = "https://github.com/zhorahmatt"
+  # if you set this to 0, only submenu trigger will be visible
+  showMenuItems = 2
 
-[[params.social]]
-name = "Twitter"
-icon = "twitter"
-url = "https://twitter.com/zhorahmat/"
+  # Show reading time in minutes for posts
+  showReadingTime = false
 
-[[params.social]]
-name = "Instagram"
-icon = "instagram"
-url = "https://instagram.com/zhorahmatt/"
+  # Show table of contents at the top of your posts (defaults to false)
+  # Alternatively, add this param to post front matter for specific posts
+  # toc = true
 
-# Main menu Items
+  # Show full page content in RSS feed items
+  #(default is Description or Summary metadata in the front matter)
+  # rssFullText = true
 
-[[menu.main]]
-name = "Home"
-url = "/"
-weight = 1
+[languages]
+  [languages.en]
+    title = "@zhorahmatt"
+    subtitle = "A simple theme for Hugo"
+    keywords = ""
+    copyright = ""
+    menuMore = "Show more"
+    writtenBy = "Written by"
+    readMore = "Read more"
+    readOtherPosts = "Read other posts"
+    newerPosts = "Newer posts"
+    olderPosts = "Older posts"
+    minuteReadingTime = "min read"
+    dateFormatSingle = "2006-01-02"
+    dateFormatList = "2006-01-02"
+    # leave empty to disable, enter display text to enable
+    # lastModDisplay = ""
 
-[[menu.main]]
-name = "All posts"
-url = "/posts"
-weight = 2
+    [languages.en.params.logo]
+      logoText = "hello friend"
+      logoHomeLink = "/"
+    # or
+    #
+    # path = "/img/your-example-logo.svg"
+    # alt = "Your example logo alt text"
 
-[[menu.main]]
-name = "About"
-url = "/about"
-weight = 3
+    [languages.en.menu]
+      [[languages.en.menu.main]]
+        identifier = "about"
+        name = "About"
+        url = "/about"
+      [[languages.en.menu.main]]
+        identifier = "showcase"
+        name = "Showcase"
+        url = "/showcase"
