--- a/config.toml
+++ b/config.toml
@@ -15,11 +15,11 @@ paginate = 5
   showMenuItems = 2
 
   # Show reading time in minutes for posts
-  showReadingTime = false
+  showReadingTime = true
 
   # Show table of contents at the top of your posts (defaults to false)
   # Alternatively, add this param to post front matter for specific posts
-  # toc = true
+  toc = true
 
   # Show full page content in RSS feed items
   #(default is Description or Summary metadata in the front matter)
@@ -44,7 +44,7 @@ paginate = 5
     # lastModDisplay = ""
 
     [languages.en.params.logo]
-      logoText = "hello friend"
+      logoText = "@zhorahmatt"
       logoHomeLink = "/"
     # or
     #
