update theme to hello-friend and posts

--- a/config.toml
+++ b/config.toml
@@ -19,16 +19,17 @@ paginate = 5
 
   # Show table of contents at the top of your posts (defaults to false)
   # Alternatively, add this param to post front matter for specific posts
-  toc = true
+  toc = false
 
   # Show full page content in RSS feed items
   #(default is Description or Summary metadata in the front matter)
   # rssFullText = true
 
+  
 [languages]
   [languages.en]
-    title = "@zhorahmatt"
-    subtitle = "A simple theme for Hugo"
+    title = "zhorahmatt"
+    subtitle = "deep tinker"
     keywords = ""
     copyright = ""
     menuMore = "Show more"
