update config.toml - add disquss

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 theme = "hello-friend"
 paginate = 5
 googleAnalytics = "UA-191466426-1"
+disqusShortname = "http-rahmathidayat-id"
 
 [params]
   # dir name of your blog content (default is `content/posts`).
@@ -31,7 +32,7 @@ googleAnalytics = "UA-191466426-1"
   [languages.en]
     title = "zhorahmatt"
     subtitle = "deep tinker"
-    keywords = ""
+    keywords = "rahmathidayat.my.id"
     copyright = ""
     menuMore = "Show more"
     writtenBy = "Written by"
