add new post reverse proxy go

--- a/config.toml
+++ b/config.toml
@@ -30,8 +30,8 @@ disqusShortname = "http-rahmathidayat-id"
   
 [languages]
   [languages.en]
-    title = "zhorahmatt"
-    subtitle = "deep tinker"
+    title = "The Official Website of zhorahmatt - "
+    subtitle = "Creative and Deep Thinker"
     keywords = "rahmathidayat.my.id"
     copyright = ""
     menuMore = "Show more"
